--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,7 @@
               <nav>
                 <div class="menu_objects">
                     <div class="logo" id="image-grid">
-                      <img src="../static/pictures/Zasób 1.svg" alt="Logo 1"   />
-                      <img src="../static/pictures/Zasób 2.svg" alt="Logo 2" />
+                      <img src="../static/pictures/Zasób 1.svg" alt="Logo 1">
                     </div>
                   <div class="center">
                     <div class="menu-item">
@@ -55,8 +54,8 @@
                 <div class="obj"><a href="#">Item 2</a></div>
                 <div class="obj"><a href="#">Item 3</a></div>
                 <div class="buttons">
-                    <button class="get_start2">Get Start</button>
-                    <button class="log_in2">Log In</button>
+                    <button class="get_start2"><a href="/login" style="color: black; text-decoration: none;" >Get Start</a></button>
+                    <button class="log_in2" ><a href="/login" style="color: white;text-decoration: none;">Log In</a></button>
                 </div>
               </div>
             <div class="container">
