--- a/static/css/main.css
+++ b/static/css/main.css
@@ -325,12 +325,13 @@ body.dark-mode .dark-theme {
     .white_divs {
         margin-top: 100px;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 2100%;
 
     }
-    .card {
-        color: black;
+    .card { 
         width: 90%;
 
 
@@ -345,6 +346,6 @@ body.dark-mode .dark-theme {
     }
     .theme-switcher{
             margin-right: 40px;
-            margin-bottom: 80px;
+        
     } 
 }
