--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@ document.addEventListener('DOMContentLoaded', function () {
     const switcher = document.querySelector('.theme-switcher');
     const body = document.body;
     const slideDiv = document.querySelector('.slid');
-    const cards = document.querySelectorAll('.card'); // Zmieniamy na querySelectorAll
+    const cards = document.querySelectorAll('.card'); 
     const main_name = document.querySelector('.title');
     const h1 = document.querySelector('h1');
     const h4 = document.querySelector('h4');
